fix(breadcrumb): vertical align breadcrumb dots

--- a/components/Breadcrumb/src/index.scss
+++ b/components/Breadcrumb/src/index.scss
@@ -101,6 +101,6 @@ ol.denhaag-breadcrumb__list {
   line-height: 0;
   position: absolute;
   text-indent: 0;
-  top: calc(50% - 3px);
+  top: calc(50% - 5px);
   vertical-align: baseline;
 }
